--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Analog Clock</title>
-    <link rel="shortcut icon" href="img/Joe.png" type="image">
+    <link rel="shortcut icon" href="assets/img/Joe.png" type="image">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
